--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crud-todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ikyyxyz.github.io/todolist-v2",
+  "homepage": "https://ikyyxyz.github.io/todolist-v2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
